# frameworks-praktika-3

./: .gitignore  TODO.md  docker-compose.yml
db/: init-csv.sql  init.sql
services/go-legacy/: Dockerfile  entrypoint.sh  go.mod  main.go  telemetry-cron
services/pascal-legacy/: Dockerfile  legacy.pas  run.sh
services/php-web/: Dockerfile  entrypoint.sh
services/php-web/laravel-patches/app/: CmsBlock.php
services/php-web/laravel-patches/app/Repositories/: CmsBlockRepository.php
services/php-web/laravel-patches/config/: database.php
services/php-web/laravel-patches/database/migrations/: 2025_11_20_120000_create_cms_blocks_table.php
services/php-web/laravel-patches/resources/views/: dashboard.blade.php  iss.blade.php  osdr.blade.php
services/php-web/laravel-patches/routes/: web.php
services/rust-iss/: Cargo.toml
services/rust-iss/src/: lib.rs  main.rs
services/rust-iss/src/clients/: issclient.rs  mod.rs  nasaclient.rs  rate_limiter.rs  spacexclient.rs
services/rust-iss/src/config/: mod.rs
services/rust-iss/src/domain/: mod.rs
services/rust-iss/src/handlers/: health.rs  iss.rs  mod.rs  osdr.rs  space.rs  units.rs
services/rust-iss/src/models/: api_error.rs  health.rs  iss_data.rs  mod.rs  osdr_item.rs  space_cache_item.rs  space_summary.rs  trend.rs
services/rust-iss/src/repo/: cache.rs  iss.rs  mod.rs  osdr.rs
services/rust-iss/src/routes/: mod.rs
services/rust-iss/src/services/: apod.rs  donki.rs  helpers.rs  iss.rs  mod.rs  neo.rs  osdr.rs  spacex.rs  units.rs
services/rust-iss/tests/: integration.rs
(+24 files in other folders)
