
[package]
name = "rust_iss"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
reqwest-retry = "0.4"
reqwest-middleware = "0.2"
governor = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
hyper = { version = "0.14", features = ["full"] }
async-trait = "0.1"
http = "0.2"
task-local-extensions = "0.1"
uuid = { version = "1", features = ["v4"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
axum-test = "14.1"
tokio = { version = "1", features = ["macros"] }
serde_json = "1"
